--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,15 @@
             <version>1.16.22</version>
         </dependency>
 
+        <!--zookeeper-->
+        <!-- https://mvnrepository.com/artifact/org.apache.zookeeper/zookeeper -->
+        <dependency>
+            <groupId>org.apache.zookeeper</groupId>
+            <artifactId>zookeeper</artifactId>
+            <version>3.5.6</version>
+        </dependency>
+
+
 
 
     </dependencies>
