--- a/pom.xml
+++ b/pom.xml
@@ -109,7 +109,7 @@
                     <groupId>log4j</groupId>
                 </exclusion>
             </exclusions>
-            <version>3.5.6</version>
+            <version>3.5.7</version>
         </dependency>
 
         <dependency>
@@ -117,6 +117,13 @@
             <artifactId>hutool-all</artifactId>
             <version>5.1.5</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-recipes</artifactId>
+            <version>4.3.0</version>
+        </dependency>
+
 
 
 
